--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -1,8 +1,7 @@
 
 {% extends 'base.html' %}
-{% load static %}
 {% block body %}
-
+{% load static %}
 <body class="animsition">
 
 	<!-- Header -->
@@ -41,7 +40,11 @@
 						<ul class="main_menu">
 							<li>
 								<a href="index.html">Home</a>
-								
+								<ul class="sub_menu">
+									<li><a href="index.html">Homepage V1</a></li>
+									<li><a href="home-02.html">Homepage V2</a></li>
+									<li><a href="home-03.html">Homepage V3</a></li>
+								</ul>
 							</li>
 
 							<li>
@@ -120,7 +123,7 @@
 
 								<li class="header-cart-item">
 									<div class="header-cart-item-img">
-										<img src="{% static 'ecommerce/images/item-cart-03.jpg' %}" alt="IMG">
+										<img src="images/item-cart-03.jpg" alt="IMG">
 									</div>
 
 									<div class="header-cart-item-txt">
@@ -279,7 +282,7 @@
 							<span class="topbar-email">
 								fashe@example.com
 							</span>
-							</div>
+						</div>
 					</li>
 
 					<li class="item-topbar-mobile p-l-10">
@@ -293,9 +296,7 @@
 					</li>
 
 					<li class="item-menu-mobile">
-						<a href="{% url 'home' %}">Home</a>
-						
-						<i class="arrow-main-menu fa fa-angle-right" aria-hidden="true"></i>
+						<a href="index.html">Home</a>
 					</li>
 
 					<li class="item-menu-mobile">
@@ -326,240 +327,39 @@
 		</div>
 	</header>
 
-	<!-- breadcrumb -->
-	<div class="bread-crumb bgwhite flex-w p-l-52 p-r-15 p-t-30 p-l-15-sm">
-		<a href="index.html" class="s-text16">
-			Home
-			<i class="fa fa-angle-right m-l-8 m-r-9" aria-hidden="true"></i>
-		</a>
+	<!-- Title Page -->
+	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url({% static 'ecommerce/images/heading-pages-06.jpg' %});">
+		<h2 class="l-text2 t-center">
+			Contact
+		</h2>
+	</section>
 
-		<a href="product.html" class="s-text16">
-			Women
-			<i class="fa fa-angle-right m-l-8 m-r-9" aria-hidden="true"></i>
-		</a>
+	<!-- content page -->
+	<section class="bgwhite p-t-66 p-b-60">
+		<div class="container">
+			<div class="row">
 
-		<a href="#" class="s-text16">
-			T-Shirt
-			<i class="fa fa-angle-right m-l-8 m-r-9" aria-hidden="true"></i>
-		</a>
+				<div class="col-md-6 p-b-30">
+					<form class="leave-comment" action="{% url 'contact' %}" method="post">{% csrf_token %}
+						<h4 class="m-text26 p-b-36 p-t-15">
+							Send us your message
+						</h4>
+							{{ contact_form }}<br>
 
-		<span class="s-text17">
-			Boxy T-Shirt with Roll Sleeve Detail
-		</span>
-	</div>
-
-	<!-- Product Detail -->
-	<div class="container bgwhite p-t-35 p-b-80">
-		<div class="flex-w flex-sb">
-			<div class="w-size13 p-t-30 respon5">
-				<div class="wrap-slick3 flex-sb flex-w">
-					<div class="wrap-slick3-dots"></div>
-
-					<div class="slick3">
-						<div class="item-slick3" data-thumb="{{ product_view.product_image.url }}">
-							<div class="wrap-pic-w">
-								<img src="{{  product_view.product_image.url }}">
-							</div>
+						
+						<div class="w-size25">
+							<!-- Button -->
+							<button class="flex-c-m size2 bg1 bo-rad-23 hov1 m-text3 trans-0-4">
+								Send
+							</button>
 						</div>
-
-						<div class="item-slick3" data-thumb=" {{ product_view.product_image_second_image }} ">
-							<div class="wrap-pic-w">
-								<img src="{{ product_view.product_image_second.url }}" alt="IMG-PRODUCT">
-							</div>
-						</div>
-
-						<div class="item-slick3" data-thumb="{{ product_view.product_image_third.url }}">
-							<div class="wrap-pic-w">
-								<img src="{{ product_view.product_image_third.url }}" alt="IMG-PRODUCT">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="w-size14 p-t-30 respon5">
-				<h4 class="product-detail-name m-text16 p-b-13">
-					{{ product_view.product_name|capfirst }}
-				</h4>
-
-				<span class="m-text17">
-					₹ {{ product_view.product_price }}
-				</span>
-
-				<p class="s-text8 p-t-10">
-					{{ product_view.product_eye_catcher }}
-				</p>
-
-				<!--  -->
-				<div class="p-t-33 p-b-60">
-					<div class="flex-m flex-w p-b-10">
-						<div class="s-text15 w-size15 t-center">
-							Size
-						</div>
-
-						<div class="rs2-select2 rs3-select2 bo4 of-hidden w-size16">
-							<select class="selection-2" name="size">
-								<option>Choose an option</option>
-								<option>Size S</option>
-								<option>Size M</option>
-								<option>Size L</option>
-								<option>Size XL</option>
-							</select>
-						</div>
-					</div>
-
-					<div class="flex-m flex-w">
-						<div class="s-text15 w-size15 t-center">
-							Color
-						</div>
-
-						<div class="rs2-select2 rs3-select2 bo4 of-hidden w-size16">
-							<select class="selection-2" name="color">
-								<option>Choose an option</option>
-								<option>{{  product_view.product_color_by_user }}</option>
-							</select>
-						</div>
-					</div>
-
-					<div class="flex-r-m flex-w p-t-10">
-						<div class="w-size16 flex-m flex-w">
-							<div class="flex-w bo5 of-hidden m-r-22 m-t-10 m-b-10">
-								<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
-									<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
-								</button>
-
-								<input class="size8 m-text18 t-center num-product" type="number" name="num-product" value="1">
-
-								<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
-									<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-								</button>
-							</div>
-
-							<div class="btn-addcart-product-detail size9 trans-0-4 m-t-10 m-b-10">
-								<!-- Button -->
-								<button class="flex-c-m sizefull bg1 bo-rad-23 hov1 s-text1 trans-0-4">
-									Add to Cart
-								</button>
-							</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="p-b-45">
-					<span class="s-text8 m-r-35">ID: {{ product_view.id }}</span>
-					<span class="s-text8">Categories: <b>{{  product_view.product_category }}</b></span>
-				</div>
-
-				<!--  -->
-				<div class="wrap-dropdown-content bo6 p-t-15 p-b-14 active-dropdown-content">
-					<h5 class="js-toggle-dropdown-content flex-sb-m cs-pointer m-text19 color0-hov trans-0-4">
-						Description
-						<i class="down-mark fs-12 color1 fa fa-minus dis-none" aria-hidden="true"></i>
-						<i class="up-mark fs-12 color1 fa fa-plus" aria-hidden="true"></i>
-					</h5>
-
-					<div class="dropdown-content dis-none p-t-15 p-b-23">
-						<p class="s-text8">
-							{{ product_view.product_description }}
-						</p>
-					</div>
-				</div>
-
-				<div class="wrap-dropdown-content bo7 p-t-15 p-b-14">
-					<h5 class="js-toggle-dropdown-content flex-sb-m cs-pointer m-text19 color0-hov trans-0-4">
-						Additional information
-						<i class="down-mark fs-12 color1 fa fa-minus dis-none" aria-hidden="true"></i>
-						<i class="up-mark fs-12 color1 fa fa-plus" aria-hidden="true"></i>
-					</h5>
-
-					<div class="dropdown-content dis-none p-t-15 p-b-23">
-						<p class="s-text8">
-							{{ product_view.product_addition_detail }} 
-						</p>
-					</div>
-				</div>
-
-				<div class="wrap-dropdown-content bo7 p-t-15 p-b-14">
-					<h5 class="js-toggle-dropdown-content flex-sb-m cs-pointer m-text19 color0-hov trans-0-4">
-						Reviews ( {{ length_of_review }} )
-						<i class="down-mark fs-12 color1 fa fa-minus dis-none" aria-hidden="true"></i>
-						<i class="up-mark fs-12 color1 fa fa-plus" aria-hidden="true"></i>
-					</h5>
-
-					<div class="dropdown-content dis-none p-t-15 p-b-23">
-						{% for review in show_reviews %}
-						<p class="s-text6">
-							Name: {{ review.product_reviewer_name|title }}
-						<p class="s-text8" style="padding: 20px;">
-							Review: {{ review.product_review|capfirst }}<hr>
-						</p>
-						</p>
-						{% endfor %}
-					</div><br><br>
-					<form action="{% url 'product-detail' pk=product_view.pk %}" method="post">{% csrf_token %}
-						{{ review_form.as_p }}<br>
-						<button class="btn btn-primary">Submit</button>
 					</form>
 				</div>
 			</div>
 		</div>
-	</div>
-
-
-	<!-- Relate Product -->
-	<section class="relateproduct bgwhite p-t-45 p-b-138">
-		<div class="container">
-			<div class="sec-title p-b-60">
-				<h3 class="m-text5 t-center">
-					Related <span style="background-color: black; color: white;">Products</span>
-				</h3>
-			</div>
-
-			<!-- Slide2 -->
-			<div class="wrap-slick2">
-				<div class="slick2">
-
-					<div class="item-slick2 p-l-15 p-r-15">
-						<!-- Block2 -->
-						{% for related in related_products %}
-						<div class="block2">
-							<div class="block2-img wrap-pic-w of-hidden pos-relative block2-label{{ related.product_tage }}">
-								<img src="{{ related.product_image.url }}" alt="IMG-PRODUCT">
-
-								<div class="block2-overlay trans-0-4">
-									<a href="#" class="block2-btn-addwishlist hov-pointer trans-0-4">
-										<i class="icon-wishlist icon_heart_alt" aria-hidden="true"></i>
-										<i class="icon-wishlist icon_heart dis-none" aria-hidden="true"></i>
-									</a>
-
-									<div class="block2-btn-addcart w-size1 trans-0-4">
-										<!-- Button -->
-										<button class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4">
-											Add to Cart
-										</button>
-									</div>
-								</div>
-							</div>
-
-							<div class="block2-txt p-t-20">
-								<a href="{% url 'product-detail' pk=related.pk %}" class="block2-name dis-block s-text3 p-b-5">
-									{{ related.product_name|capfirst }}
-								</a>
-
-								<span class="block2-price m-text6 p-r-5">
-									₹ {{ related.product_price }}
-								</span>
-							</div>
-						</div>
-						{% endfor %}
-					</div>
-			</div>
-		</div>
-	</div>
 	</section>
+
 	<script type="text/javascript">
-
-
 		$(".selection-1").select2({
 			minimumResultsForSearch: 20,
 			dropdownParent: $('#dropDownSelect1')
@@ -571,27 +371,5 @@
 		});
 	</script>
 
-	<script type="text/javascript">
-		$('.block2-btn-addcart').each(function(){
-			var nameProduct = $(this).parent().parent().parent().find('.block2-name').html();
-			$(this).on('click', function(){
-				swal(nameProduct, "is added to cart !", "success");
-			});
-		});
-
-		$('.block2-btn-addwishlist').each(function(){
-			var nameProduct = $(this).parent().parent().parent().find('.block2-name').html();
-			$(this).on('click', function(){
-				swal(nameProduct, "is added to wishlist !", "success");
-			});
-		});
-
-		$('.btn-addcart-product-detail').each(function(){
-			var nameProduct = $('.product-detail-name').html();
-			$(this).on('click', function(){
-				swal(nameProduct, "is added to wishlist !", "success");
-			});
-		});
-	</script>
 
 {% endblock %}
