--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -24,22 +24,23 @@
 							<th class="column-4 p-l-70">Quantity</th>
 							<th class="column-5">Total</th>
 						</tr>
-
+						{% for items in show_product %}
 						<tr class="table-row">
 							<td class="column-1">
+								
 								<div class="cart-img-product b-rad-4 o-f-hidden">
-									<img src="{% static 'ecommerce/images/item-10.jpg' %}" alt="IMG-PRODUCT">
+									<img src="{{ items.product_image.url }}" alt="IMG-PRODUCT">
 								</div>
 							</td>
-							<td class="column-2">Men Tshirt</td>
-							<td class="column-3">$36.00</td>
+							<td class="column-2">{{ items.product_name|capfirst }}</td>
+							<td class="column-3">₹  {{ items.product_price }}</td>
 							<td class="column-4">
+								<form action="{% url 'quantity' pk=items.pk %}" method="POST">{% csrf_token %}
 								<div class="flex-w bo5 of-hidden w-size17">
 									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
 										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
 									</button>
-
-									<input class="size8 m-text18 t-center num-product" type="number" name="num-product1" value="1">
+									<input class="size8 m-text18 t-center num-product" type="number" name="num-product" value="1">
 
 									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
 										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
@@ -48,30 +49,8 @@
 							</td>
 							<td class="column-5">$36.00</td>
 						</tr>
-
-						<tr class="table-row">
-							<td class="column-1">
-								<div class="cart-img-product b-rad-4 o-f-hidden">
-									<img src="{% static 'ecommerce/images/item-05.jpg' %}" alt="IMG-PRODUCT">
-								</div>
-							</td>
-							<td class="column-2">Mug Adventure</td>
-							<td class="column-3">$16.00</td>
-							<td class="column-4">
-								<div class="flex-w bo5 of-hidden w-size17">
-									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
-										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
-									</button>
-
-									<input class="size8 m-text18 t-center num-product" type="number" name="num-product2" value="1">
-
-									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
-										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
-									</button>
-								</div>
-							</td>
-							<td class="column-5">$16.00</td>
-						</tr>
+					
+						
 					</table>
 				</div>
 			</div>
@@ -88,6 +67,8 @@
 							Apply coupon
 						</button>
 					</div>
+				</form>
+					{% endfor %}
 				</div>
 
 				<div class="size10 trans-0-4 m-t-10 m-b-10">
