--- a/cart/templates/cart-detail.html
+++ b/cart/templates/cart-detail.html
@@ -2,7 +2,7 @@
 {% block body %}
 {% load static %}
 {% include 'navbar.html' %}
-{% block title %}{{ total_price }}{% endblock %}
+{% block title %} cart {% endblock %}
 	<!-- Title Page -->
 	<section class="bg-title-page p-t-40 p-b-50 flex-col-c-m" style="background-image: url({% static 'ecommerce/images/heading-pages-01.jpg' %});">
 		<h2 class="l-text2 t-center">
@@ -28,9 +28,9 @@
 						<tr class="table-row">
 							<td class="column-1">
 								
-								<a href="{% url 'delete-item' pk=items.pk %}"><div class="cart-img-product b-rad-4 o-f-hidden">
+								<div class="cart-img-product b-rad-4 o-f-hidden">
 									<img src="{{ items.product_image.url }}" alt="IMG-PRODUCT">
-								</div></a>
+								</div>
 							</td>
 							<td class="column-2">{{ items.product_name|capfirst }}</td>
 							<td crlass="column-3">₹  {{ items.product_price }}</td>
@@ -40,17 +40,15 @@
 									<button class="btn-num-product-down color1 flex-c-m size7 bg8 eff2">
 										<i class="fs-12 fa fa-minus" aria-hidden="true"></i>
 									</button>
-									<input class="size8 m-text18 t-center num-product" type="number" name="num-product" value="1">
+									<input class="size8 m-text18 t-center num-product" type="number" name="num-product" value="{{ quality_price }}">
 
 									<button class="btn-num-product-up color1 flex-c-m size7 bg8 eff2">
 										<i class="fs-12 fa fa-plus" aria-hidden="true"></i>
 									</button>
 								</div>
 							</td>							
-							<td class="column-5">₹ {{ items.product_price }}</td>
+							<td class="column-5">₹ {{ total_price }}</td>
 						</tr>
-					
-						
 					</table>
 				</div>
 			</div>
@@ -82,40 +80,37 @@
 					</span>
 
 					<span class="m-text21 w-size20 w-full-sm">
-						{{ total_price }}
+						₹ {{ total_price }}
 					</span>
 				</div>
 
 				<!--  -->
 				<div class="flex-w flex-sb bo10 p-t-15 p-b-20">
 					<span class="s-text18 w-size19 w-full-sm">
-						Shipping:
+						Ship to:
 					</span>
 
 					<div class="w-size20 w-full-sm">
-						<p class="s-text8 p-b-23">
-							There are no shipping methods available. Please double check your address, or contact us if you need any help.
-						</p>
-
-						<span class="s-text19">
-							Calculate Shipping
-						</span>
-
-						<div class="rs2-select2 rs3-select2 rs4-select2 bo4 of-hidden w-size21 m-t-8 m-b-12">
-							<select class="selection-2" name="country">
-								<option>Select a country...</option>
-								<option>US</option>
-								<option>UK</option>
-								<option>Japan</option>
-							</select>
-						</div>
 
 						<div class="size13 bo4 m-b-12">
 						<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="state" placeholder="State /  country">
 						</div>
 
 						<div class="size13 bo4 m-b-22">
-							<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="postcode" placeholder="Postcode / Zip">
+							<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="postcode" 
+							placeholder="Postcode / Zip">
+						</div>
+
+
+						<div class="size13 bo4 m-b-32">
+							<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="postcode" 
+							placeholder="Postcode / Zip">
+						</div>
+
+
+						<div class="size13 bo4 m-b-42">
+							<input class="sizefull s-text7 p-l-15 p-r-15" type="text" name="postcode" 
+							placeholder="Postcode / Zip">
 						</div>
 
 						<div class="size14 trans-0-4 m-b-10">
